# comparo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_HEALTH_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture-graph.mmd  architecture.md  cli.md  configuration.md  report-format.md  tui.md
examples/: README.md
examples/auth-project/: README.md  comparo.yaml
examples/auth-project/assertions/: authenticated.yaml  bearer-present.yaml  http-ok.yaml
examples/auth-project/environments/: echo.yaml
examples/auth-project/executions/: auth-smoke.yaml
examples/auth-project/requests/: basic-auth.yaml  bearer-admin.yaml  bearer-default.yaml
examples/broken-project/: README.md  comparo.yaml
examples/broken-project/environments/: staging.yaml
examples/broken-project/matrices/: locales.yaml
examples/broken-project/requests/: create-order.yaml  get-order.yaml  ping-again.yaml  ping.yaml  reversed-ref.yaml
examples/broken-project/schemas/: order.yaml
examples/canary-project/: README.md  comparo.yaml
examples/canary-project/assertions/: http-ok.yaml  pricing.yaml
examples/canary-project/diff/: echo-args.yaml  envelope.yaml  pricing.yaml  strict.yaml
examples/canary-project/environments/: canary.yaml  stable.yaml
examples/canary-project/executions/: release-gate.yaml
examples/canary-project/instances/: basic-auth.yaml  default-headers.yaml
examples/canary-project/matrices/: locales.yaml  plans.yaml  tiers.yaml
examples/canary-project/requests/: basic-auth.yaml  catalog.yaml  checkout.yaml  deflate.yaml  delay.yaml  encoding-utf8.yaml  gzip.yaml  headers.yaml  patch.yaml  quote.yaml  remove.yaml  schema-mismatch.yaml  search.yaml  status-mismatch.yaml  status-ok.yaml  stream.yaml  time-object.yaml  update.yaml
examples/canary-project/schemas/: authenticated.yaml  echo-get.yaml  echo-strict.yaml  echo-write.yaml  time-object.yaml
examples/checks-project/: README.md  comparo.yaml
examples/checks-project/environments/: prod.yaml
examples/checks-project/requests/: schema-fail.yaml  schema-pass.yaml  status-fail.yaml  status-pass.yaml
examples/checks-project/schemas/: slideshow-strict.yaml  slideshow.yaml
examples/health-project/: README.md  project.yaml
examples/health-project/environments/: degraded.yaml  down.yaml  healthy.yaml
examples/health-project/requests/: ping.yaml
examples/matrix-project/: README.md  comparo.yaml
examples/matrix-project/environments/: prod.yaml
examples/matrix-project/matrices/: locales.yaml  status-codes.yaml  tiers.yaml
examples/matrix-project/requests/: checkout.yaml  ping.yaml  search.yaml  status-matrix.yaml
examples/postman-echo-project/: README.md  comparo.yaml
examples/sample-project/: README.md  comparo.yaml
examples/showcase/: README.md  comparo.yaml  serve.py
examples/sse-project/: README.md  comparo.yaml  serve.py
schema/: comparo-v1.schema.json
src/comparo/: __init__.py
src/comparo/adapters/: __init__.py  (+6 more)
tests/: __init__.py  conftest.py  test_archive.py  test_assertions.py  test_checks.py  test_cli.py  test_compare.py  test_components.py  test_curl.py  test_diff.py  test_distribution.py  test_doctor.py  test_e2e.py  test_envfile.py  test_execute.py  test_execution.py  test_export.py  test_health.py  test_httpx_client.py  test_interpolation.py  test_loader.py  test_matrix.py  test_openapi.py  test_outcomes.py  test_persistence.py  test_redaction.py  test_refs.py  test_render.py  test_report.py  test_report_builder.py  test_report_record.py  test_resolution.py  test_resolve.py  test_schema.py  test_secrets.py  test_settings.py  test_streams.py  test_triage.py  test_tui.py  test_updates.py  (+1 more)
(+165 files in other folders)
