[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comparo"
version = "0.0.0"
description = "HTTP regression & diff testing across environments — TUI, headless CLI, and CI."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Walid Benbihi", email = "waligoo@gmail.com" }]
keywords = ["http", "api", "testing", "regression", "diff", "tui", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "msgspec>=0.19.0",
  "ruamel.yaml>=0.18.0",
  "httpx>=0.28.0",
  "httpx-sse>=0.4.0",
  "typer>=0.15.0",
  "textual>=0.86.0",
  "jsonschema>=4.23.0",
]

[project.urls]
Homepage = "https://github.com/wbenbihi/comparo"
Repository = "https://github.com/wbenbihi/comparo"
Issues = "https://github.com/wbenbihi/comparo/issues"

[project.scripts]
comparo = "comparo.cli.app:run"

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "syrupy>=4.8.0",
  "import-linter>=2.1.0",
  "pre-commit>=4.0.0",
  "python-semantic-release>=9.15.0",
  "types-jsonschema>=4.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/comparo"]

# ── Lint & format ───────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "TID", # flake8-tidy-imports
  "RUF", # ruff-specific
  "D",   # pydocstyle — enforce presence + Google style (no missing docstrings)
  "PT",  # flake8-pytest-style — functional-test hygiene
]

[tool.ruff.lint.isort]
force-single-line = true            # one import per line
known-first-party = ["comparo"]     # sections: stdlib, third-party, first-party

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test functions are self-describing; require module docstrings, not per-test ones.
"tests/*" = ["S101", "D103"]

[tool.ruff.format]
docstring-code-format = true

# ── Types ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["ruamel.*"]
ignore_missing_imports = true

# ── Tests ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["comparo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

# ── Architecture guard: core must not import interfaces/adapters ─────────────
[tool.importlinter]
root_package = "comparo"

[[tool.importlinter.contracts]]
name = "Interfaces and adapters may depend on core; core depends on neither"
type = "layers"
layers = [
  "comparo.cli | comparo.tui",
  "comparo.adapters",
  "comparo.core",
]

# ── Release automation (Angular commits → semantic release) ──────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"
build_command = "pip install uv && uv build"

[tool.semantic_release.branches.main]
match = "main"
